# booleanify

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  booleanify.py
